--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon index.ts",
     "test": "jest",
     "build": "npm run test && npx esbuild index.ts --bundle --platform=node --outfile=dist/index.js --minify",
+    "secure": "jest --watch --verbose=true",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -13,14 +14,19 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@jest/globals": "^30.0.0-beta.3",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
-    "globals": "^16.2.0",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
-    "jiti": "^2.4.2",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.1",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.1"
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0"
   }
 }
