--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "description": "",
   "devDependencies": {
     "@jest/globals": "^30.0.0-beta.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
@@ -28,8 +30,11 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.24"
   }
 }
