--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon index.ts",
     "test": "jest",
-    "build": "npm run test && npx esbuild index.ts --bundle --platform=node --outfile=dist/index.js --minify",
+    "build": "npx esbuild index.ts --bundle --platform=node --outfile=dist/index.js --minify",
     "secure": "jest --watch --verbose=true",
     "start": "node dist/index.js"
   },
@@ -29,7 +29,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
